--- a/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
