--- a/src/Examples/Mindbite.Mox.NotificationCenter.Data/Mindbite.Mox.NotificationCenter.Data.csproj
+++ b/src/Examples/Mindbite.Mox.NotificationCenter.Data/Mindbite.Mox.NotificationCenter.Data.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
