--- a/src/Examples/Mindbite.Mox.NotificationCenter/Mindbite.Mox.NotificationCenter.csproj
+++ b/src/Examples/Mindbite.Mox.NotificationCenter/Mindbite.Mox.NotificationCenter.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
   <ItemGroup>
