--- a/src/Mindbite.Mox.Verification/Mindbite.Mox.Verification.csproj
+++ b/src/Mindbite.Mox.Verification/Mindbite.Mox.Verification.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0-rc1-final" />
   </ItemGroup>
 
 </Project>
