--- a/src/Examples/DemoApp/web.config
+++ b/src/Examples/DemoApp/web.config
@@ -4,7 +4,7 @@
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="run --no-restore" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" />
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" />
   </system.webServer>
 </configuration>
 <!--ProjectGuid: 55aadf18-0417-4636-a4e2-4510c2bcfa7a-->
