--- a/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
+++ b/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
@@ -1,12 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+  <PropertyGroup Label="Configuration">
+    <OutputType>Library</OutputType>
+  </PropertyGroup>
+  
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyVersion>2.1.13.0</AssemblyVersion>
     <FileVersion>2.1.13.0</FileVersion>
     <Version>2.1.13</Version>
+    <OutputTypeEx>library</OutputTypeEx>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mindbite.Mox.Core\Mindbite.Mox.Core.csproj" />
