--- a/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
+++ b/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
@@ -27,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Areas\*\Views\**" />
-    <EmbeddedResource Include="Views\**" />
+    <!--<EmbeddedResource Include="Areas\*\Views\**" />
+    <EmbeddedResource Include="Views\**" />-->
     <EmbeddedResource Include="wwwroot\**" />
   </ItemGroup>
   
