--- a/src/Mindbite.Mox.Communication/Mindbite.Mox.Communication.csproj
+++ b/src/Mindbite.Mox.Communication/Mindbite.Mox.Communication.csproj
@@ -6,11 +6,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>2.1.0.0</AssemblyVersion>
-    <FileVersion>2.1.0.0</FileVersion>
-    <Version>2.1.0</Version>
+    <AssemblyVersion>2.1.1.0</AssemblyVersion>
+    <FileVersion>2.1.1.0</FileVersion>
+    <Version>2.1.1</Version>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
