--- a/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
+++ b/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
@@ -5,11 +5,12 @@
   
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyVersion>2.1.13.0</AssemblyVersion>
-    <FileVersion>2.1.13.0</FileVersion>
-    <Version>2.1.13</Version>
+    <AssemblyVersion>2.1.14.0</AssemblyVersion>
+    <FileVersion>2.1.14.0</FileVersion>
+    <Version>2.1.14</Version>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" />
