Generate and send a shor code along with magic link.

--- a/src/Examples/DemoApp/appsettings.json
+++ b/src/Examples/DemoApp/appsettings.json
@@ -11,6 +11,8 @@
     "Backdoor": {
       "UseBackdoor": true,
       "Email": "backdoor@mindbite.se",
+      //"RemotePasswordAuthUrl": "https://example.com/auth/",
+      //"RemotePasswordAuthDataFormatString": "secret=xxx&password={0}"
       "Password": "Qwerty1234"
     }
   }
