--- a/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
+++ b/src/Mindbite.Mox.Identity.Data/Mindbite.Mox.Identity.Data.csproj
@@ -5,12 +5,14 @@
   
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>2.1.14.0</AssemblyVersion>
-    <FileVersion>2.1.14.0</FileVersion>
-    <Version>2.1.14</Version>
+    <AssemblyVersion>2.2.1.0</AssemblyVersion>
+    <FileVersion>2.2.1.0</FileVersion>
+    <Version>2.2.1</Version>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <IsPackable>true</IsPackable>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <Copyright>Mindbite AB</Copyright>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" />
