--- a/src/Examples/DemoApp/appsettings.json
+++ b/src/Examples/DemoApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.111.64;Initial Catalog=MoxDemoApp;User Id=??;Password=??;"
+    "DefaultConnection": "Data Source=192.168.111.64;Initial Catalog=MoxDemoApp;User Id=sa;Password=#ko@wall!;"
   },
   "EmailSender": {
     "SmtpServer": "smtp.mindbitemailer.se",
