Mobile CSS. FormController.

--- a/src/Examples/DemoApp/appsettings.json
+++ b/src/Examples/DemoApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.111.64;Initial Catalog=MoxDemoApp;User Id=sa;Password=#ko@wall!;"
+    "DefaultConnection": "Data Source=192.168.111.64;Initial Catalog=MoxDemoApp;User Id=??;Password=??;"
   },
   "EmailSender": {
     "SmtpServer": "smtp.mindbitemailer.se",
@@ -11,9 +11,9 @@
     "Backdoor": {
       "UseBackdoor": true,
       "Email": "backdoor@mindbite.se",
+      "Password": "Qwerty1234"
       //"RemotePasswordAuthUrl": "https://example.com/auth/",
       //"RemotePasswordAuthDataFormatString": "secret=xxx&password={0}"
-      "Password": "Qwerty1234"
     }
   }
 }
