--- a/src/Examples/DemoApp/web.config
+++ b/src/Examples/DemoApp/web.config
@@ -4,7 +4,12 @@
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" />
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+      <environmentVariables>
+        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+        <environmentVariable name="COMPLUS_ForceENC" value="1" />
+      </environmentVariables>
+    </aspNetCore>
   </system.webServer>
 </configuration>
 <!--ProjectGuid: 55aadf18-0417-4636-a4e2-4510c2bcfa7a-->
