--- a/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
@@ -4,17 +4,16 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\Mindbite.Mox.Core\Mindbite.Mox.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+  </ItemGroup>
 </Project>
