--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -7,10 +7,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <IsPackable>true</IsPackable>
-    <Version>3.0.0</Version>
+    <Version>3.0.6</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>3.0.0.0</FileVersion>
-    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.6.0</FileVersion>
+    <AssemblyVersion>3.0.6.0</AssemblyVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
@@ -26,7 +26,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Remove="tsconfig.json" />
-    <Content Remove="wwwroot\mox\svg\arrow-down.svg" />
+    <Content Remove="wwwroot\mox\static\svg\arrow-down.svg" />
     <Content Remove="Properties\**" />
   </ItemGroup>
 
