--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -7,10 +7,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <IsPackable>true</IsPackable>
-    <Version>3.1.20</Version>
+    <Version>3.1.23</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>3.1.20.0</FileVersion>
-    <AssemblyVersion>3.1.20.0</AssemblyVersion>
+    <FileVersion>3.1.23.0</FileVersion>
+    <AssemblyVersion>3.1.23.0</AssemblyVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
@@ -33,6 +33,10 @@
 
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="tsconfig.json" />
   </ItemGroup>
 
 </Project>
