--- a/src/Mindbite.Mox.Core/tsconfig.json
+++ b/src/Mindbite.Mox.Core/tsconfig.json
@@ -7,12 +7,12 @@
     "sourceMap": true,
     "target": "es5",
     "module": "commonjs",
-    "outDir": "./wwwroot/mox/js",
+    "outDir": "./wwwroot/mox/static/js",
     "lib": [ "dom", "es2015.promise", "es5", "scripthost" ],
     "declaration": true,
     "declarationDir": "./contentFiles/ts/types"
   },
-  "include": ["./wwwroot/mox/js"],
+  "include": ["./wwwroot/mox/static/js/src"],
   "exclude": [
     "node_modules",
     "./contentFiles/ts/types"
