--- a/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp.Data/Mindbite.Mox.DesignDemoApp.Data.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
@@ -14,6 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
   </ItemGroup>
 </Project>
