--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Mindbite.Mox.DesignDemoApp.csproj
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Mindbite.Mox.DesignDemoApp.csproj
@@ -5,13 +5,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
