--- a/src/Examples/Mindbite.Mox.NotificationCenter.Data/Mindbite.Mox.NotificationCenter.Data.csproj
+++ b/src/Examples/Mindbite.Mox.NotificationCenter.Data/Mindbite.Mox.NotificationCenter.Data.csproj
@@ -4,13 +4,13 @@
   </PropertyGroup>
   
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
