Role group management

--- a/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
+++ b/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
@@ -9,9 +9,9 @@
     <ApplicationIcon />
     <OutputTypeEx>library</OutputTypeEx>
     <StartupObject />
-    <Version>5.0.1</Version>
-    <AssemblyVersion>5.0.1.0</AssemblyVersion>
-    <FileVersion>5.0.1.0</FileVersion>
+    <Version>5.0.4</Version>
+    <AssemblyVersion>5.0.4.0</AssemblyVersion>
+    <FileVersion>5.0.4.0</FileVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
@@ -36,6 +36,10 @@
 
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Areas\IdentitySettings\Views\RoleGroups\EditorTemplates\RoleGroupRolesTree.cshtml" />
   </ItemGroup>
   
   <ItemGroup>
