--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -7,10 +7,10 @@
     <TargetFramework>net5.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <IsPackable>true</IsPackable>
-    <Version>5.0.6</Version>
+    <Version>5.1.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>5.0.6.0</FileVersion>
-    <AssemblyVersion>5.0.6.0</AssemblyVersion>
+    <FileVersion>5.1.1.0</FileVersion>
+    <AssemblyVersion>5.1.1.0</AssemblyVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
@@ -28,6 +28,10 @@
     </Content>
     <Content Remove="tsconfig.json" />
     <Content Remove="wwwroot\mox\static\svg\arrow-down.svg" />
+    <Content Remove="wwwroot\mox\static\svg\pointing-arrow-down.svg" />
+    <Content Remove="wwwroot\mox\static\svg\pointing-arrow-left.svg" />
+    <Content Remove="wwwroot\mox\static\svg\pointing-arrow-right.svg" />
+    <Content Remove="wwwroot\mox\static\svg\pointing-arrow-up.svg" />
     <Content Remove="Properties\**" />
   </ItemGroup>
 
