Role filters, create/delete new/old image versions, report parameters

--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -14,7 +14,7 @@
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
     <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
