Directory listing, bug fixes

--- a/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
+++ b/src/Mindbite.Mox.Core/Mindbite.Mox.Core.csproj
@@ -7,13 +7,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <OutputTypeEx>library</OutputTypeEx>
     <IsPackable>true</IsPackable>
-    <Version>6.1.7</Version>
+    <Version>6.1.8</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <FileVersion>6.1.7.0</FileVersion>
-    <AssemblyVersion>6.1.7.0</AssemblyVersion>
+    <FileVersion>6.1.8.0</FileVersion>
+    <AssemblyVersion>6.1.8.0</AssemblyVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Copyright>Mindbite AB</Copyright>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <LangVersion>9</LangVersion>
   </PropertyGroup>
 
