--- a/src/Mindbite.Mox.Communication/Mindbite.Mox.Communication.csproj
+++ b/src/Mindbite.Mox.Communication/Mindbite.Mox.Communication.csproj
@@ -14,7 +14,7 @@
     <IsPackable>true</IsPackable>
     <PackageLicenseFile></PackageLicenseFile>
     <Copyright>Mindbite AB</Copyright>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
