--- a/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
+++ b/src/Mindbite.Mox.Identity/Mindbite.Mox.Identity.csproj
@@ -9,13 +9,13 @@
     <ApplicationIcon />
     <OutputTypeEx>library</OutputTypeEx>
     <StartupObject />
-    <Version>6.1.3</Version>
-    <AssemblyVersion>6.1.3.0</AssemblyVersion>
-    <FileVersion>6.1.3.0</FileVersion>
+    <Version>6.1.4</Version>
+    <AssemblyVersion>6.1.4.0</AssemblyVersion>
+    <FileVersion>6.1.4.0</FileVersion>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Mindbite AB</Copyright>
   </PropertyGroup>
 
