--- a/src/Mindbite.Mox.Images/Mindbite.Mox.Images.csproj
+++ b/src/Mindbite.Mox.Images/Mindbite.Mox.Images.csproj
@@ -15,7 +15,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>6.1.0</Version>
     <Copyright>Mindbite AB</Copyright>
-    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IsPackable>true</IsPackable>
     <AssemblyVersion>6.1.0.0</AssemblyVersion>
     <FileVersion>6.1.0.0</FileVersion>
